--- a/style.css
+++ b/style.css
@@ -314,3 +314,128 @@ span{
 .back{
     margin-top: 40px;
 }
+.end-text{
+    margin-top: 20px;
+    font-size: 30px;
+    margin-left: 360px;
+}
+.location-box{
+    margin-top: 50px;
+    background: #149ddd;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    position: absolute;
+    margin-left: 60px;
+}
+.location{
+    padding-top: 14px;
+    margin-left: 15px;
+    color: #fff;
+}
+.location-main-text{
+    margin-top: -40px;
+    font-size: 30px;
+    margin-left: 50px;
+}
+.info-con{
+    margin-top: 20px;
+    margin-left: 360px;
+    background: #fff;
+    width: 1000px;
+    height: 445px;
+    box-shadow: 0 0 24px 0 rgb(0 0 0 / 12%);
+}
+.location-sub-text{
+    position: absolute;
+    margin-top: 85px;
+    margin-left: 110px;
+}
+.email-box{
+    margin-top: 150px;
+    background: #149ddd;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    position: absolute;
+    margin-left: 60px;
+}
+.email{
+    padding-top: 14px;
+    margin-left: 14px;
+    color: #fff;
+}
+.email-main-text{
+    margin-top: -50px;
+    font-size: 30px;
+    margin-left: 50px;
+}
+.email-sub-text{
+    position: absolute;
+    margin-top: 170px;
+    margin-left: 110px;
+}
+.call-box{
+    margin-top: 250px;
+    background: #149ddd;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    position: absolute;
+    margin-left: 60px;
+}
+.call{
+    padding-top: 14px;
+    margin-left: 14px;
+    color: #fff;
+}
+.call-main-text{
+    margin-top: -50px;
+    font-size: 30px;
+    margin-left: 50px;
+}
+.call-sub-text{
+    position: absolute;
+    margin-top: 270px;
+    margin-left: 110px;
+}
+.github-box{
+    margin-top: 350px;
+    background: #149ddd;
+    border-radius: 50%;
+    width: 44px;
+    height: 44px;
+    position: absolute;
+    margin-left: 60px;
+}
+.github{
+    padding-top: 14px;
+    margin-left: 14px;
+    color: #fff;
+}
+.github-main-text{
+    margin-top: -40px;
+    font-size: 30px;
+    margin-left: 50px;
+}
+.github-sub-text{
+    position: absolute;
+    margin-top: 370px;
+    margin-left: 110px;
+    color: #149ddd;
+}
+footer{
+    margin-top: 50px;
+    background-color: #173b6c;
+    text-align-last: center;
+    color: #fff;
+    height: 70px;
+}
+footer a{
+    margin-left: 120px;
+    color: #fff;
+}
+.footer-text{
+    margin-left: 120px;
+    margin-top: 10px
+}
