--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header{
     background-color: #040b14;
     float: left;
     width: 300px;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     z-index: 999999;
 }
@@ -466,7 +466,10 @@ footer{
     background-color: #173b6c;
     text-align-last: center;
     color: #fff;
-    height: 70px;
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 footer a{
     margin-left: 120px;
@@ -475,4 +478,7 @@ footer a{
 .footer-text{
     margin-left: 120px;
     margin-top: 10px
+}
+.f-text{
+    text-align: center;
 }
