--- a/style.css
+++ b/style.css
@@ -226,13 +226,6 @@ span{
     width: 20%;
     border-bottom: 3px solid #149ddd;
 }
-.portfoilo{
-    opacity: 0;
-}
-.portfoilo.active{
-    opacity: 1;
-    transition: all 0.5s;
-}
 .port-cont{
     text-align-last: center;
     border: 2px solid black;
@@ -240,20 +233,6 @@ span{
     border-radius: 10%;
     margin-left: 360px;
     margin-top: 40px;
-}
-.skill{
-    opacity: 0;
-}
-.skill.active{
-    opacity: 1;
-    transition: all 0.5s;
-}
-.contact{
-    opacity: 0;
-}
-.contact.active{
-    opacity: 1;
-    transition: all 0.5s;
 }
 .pc1{
     width: 30%;
@@ -449,4 +428,17 @@ footer a{
 }
 .f-text{
     text-align: center;
+}
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
+.aboutme.active{
+    animation: fadeInLeft 1s;
 }
