--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
+    scroll-behavior: smooth;
 }
 .con-icon{
     margin-top: 15px;
@@ -160,6 +161,26 @@ span{
     margin-left: 30px;
     font-size: 20px;
 }
+.aboutme.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
+.info.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
+.gac.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
+.about-se.active{
+    opacity: 1;
+    transition: all 0.5s;
+}   
+.resume.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
 .resume-text{
     font-size: 40px;
     margin-left: 360px;
@@ -226,6 +247,11 @@ span{
     width: 20%;
     border-bottom: 3px solid #149ddd;
 }
+
+.portfoilo.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
 .port-cont{
     text-align-last: center;
     border: 2px solid black;
@@ -233,6 +259,14 @@ span{
     border-radius: 10%;
     margin-left: 360px;
     margin-top: 40px;
+}       
+.skill.active{
+    opacity: 1;
+    transition: all 0.5s;
+}
+.contact.active{
+    opacity: 1;
+    transition: all 0.5s;
 }
 .pc1{
     width: 30%;
@@ -428,17 +462,4 @@ footer a{
 }
 .f-text{
     text-align: center;
-}
-@keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0);
-    }
-    to {
-        opacity: 1;
-        transform: translateZ(0);
-    }
-}
-.aboutme.active{
-    animation: fadeInLeft 1s;
 }
