--- a/style.css
+++ b/style.css
@@ -463,3 +463,16 @@ footer a{
 .f-text{
     text-align: center;
 }
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
+.aboutme.active{
+    animation: fadeInLeft 1s;
+}
