--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ span{
     width: 29%;
     /* margin-left: 390px;
     margin-top: 40px; */
-    
+
 }
 .about-text{
     font-size: 40px;
@@ -151,7 +151,7 @@ span{
     margin-left: 30px;
     font-size: 20px;
     color: black;
-    
+
 }
 .ch{
     color: #149ddd;
@@ -218,7 +218,7 @@ span{
     font-size: 40px;
 }
 .it1{
-    margin-left: 1350px;
+    margin-left: 1380px;
     position: absolute;
     margin-top: 350px;
 }
@@ -228,13 +228,13 @@ span{
     margin-top: 390px;
 }
 .h{
-    margin-left: 1310px;
+    margin-left: 1300px;
     position: absolute;
     margin-top: 394px;
     color: #149ddd;;
 }
 .h1{
-    margin-left: 1340px;
+    margin-left: 1360px;
     position: absolute;
     margin-top: 354px;
     color: #149ddd;;
@@ -247,19 +247,32 @@ span{
     width: 20%;
     border-bottom: 3px solid #149ddd;
 }
-
+.ject{
+    display: flex;
+    flex-wrap: wrap;
+}
 .portfoilo.active{
     opacity: 1;
     transition: all 0.5s;
 }
 .port-cont{
+    width: 350px;
+    height: 350px;
     text-align-last: center;
     border: 2px solid black;
-    width: 20%;
     border-radius: 10%;
     margin-left: 360px;
     margin-top: 40px;
-}       
+}
+.port1-cont{
+    width: 100%;
+    height: 350px;
+    text-align-last: center;
+    border: 2px solid black;
+    border-radius: 10%;
+    margin-left: 60px;
+    margin-top: 40px;
+}  
 .skill.active{
     opacity: 1;
     transition: all 0.5s;
@@ -269,9 +282,21 @@ span{
     transition: all 0.5s;
 }
 .pc1{
-    width: 30%;
+    width: 70%;
     height: 200px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+}
+.pc2{
+    width: 70%;
+    height: 200px;
+    margin-bottom: 20px;
+    border: 1px solid black;
+}
+.port-title-text{
+    color: #040b14;
+    margin-bottom: 20px;
+    font-size: 20px;
 }
 .con-text{
     margin-bottom: 20px;
